# Computer-Graphics

./: .gitignore.txt  README.md
Assignment1_3D_Transformation/: Assignment 1 3D Transformation.md
Assignment1_3D_Transformation/CGAssignment1/src/: TRRenderer.cpp  main.cpp
Assignment2_Rasterization_ZBuffering/: Assignment 2 Rasterization and ZBuffering.md
Assignment2_Rasterization_ZBuffering/22336226王泓沣HW2/CGAssignment2-Improve_src/: rasterizer.cpp
Assignment2_Rasterization_ZBuffering/CGAssignment2-Improve/: CMakeLists.txt  rasterizer.cpp  rasterizer.hpp
Assignment2_Rasterization_ZBuffering/CGAssignment2/src/: TRRenderer.cpp  TRShaderPipeline.cpp
Assignment3_Lighting_Texturing/CGAssignment3/src/: TRShadingPipeline.cpp  TRTexture2D.cpp
Assignment4_Ray_Tracing/CGAssignment4/src/: aabb.h  bvh.h  camera.h  main.cpp  material.h  moving_sphere.h  ray.h  rtweekend.h  sphere.h  vec3.h
Assignment4_Ray_Tracing/src/: hittable.h  hittable_list.h
